* CHANGES IN dplR VERSION 1.7.5

File: normalize1
----------------

- Found a bug so that when hanning was used (in say corr.rel.seg) a div0 error could occur resulting in a Nan that got propogated forward. Dealt with in the same way as detrend.series by setting 0 to 0.001.


File: powt.series
----------------

- Adding function so that a power transform can be done on a single series alone

* CHANGES IN dplR VERSION 1.7.4

File: chron.ci
----------------

- New function that calculates conf intervals for a chron via boot

File: detrend.series
----------------

- Fixed bug with method Ar using difference.
- Added in a flag for dirtyDogs to return.info

* CHANGES IN dplR VERSION 1.7.3

File: Various
----------------

- Replaced ffcsaps with caps in most instances across the package.
- Removing prefix argument from chron.
- Removing all vingettes and pointing to Learning to Love dplR on startup
- Typos and code cleanup in several files

File: zzz
----------------

- Adding startup message when dplR is loaded


File: crn.plot
----------------

- Added crn names to plot. helpful for ars crn and var stab crn plotting.

File: ssf
----------------

- A simple signal free implementation.

File: chron.ars
----------------

- The ARSTAN chronology at long last.

File: detrend
----------------

- When dopar is used for the looping, the series name wasn't being passed in. So modified code to take the series name. I think I did it marginally right. But dopar, foreach, and do.call are all prety opaque to me.

File: detrend.series
----------------

- Went to heroic efforts to improve the warnings that the user sees when there are negative fits from detrending. It was a huge time sink and hassle.


File: nm046
----------------

- Added new data file, nm046 is a rwl file that has a dirty dog in it (one where spline fits are negative in detrending).

File: ffcsaps
----------------

- Added `ties = "ordered"` to approx() to avoid warning thrown by regularize.values

File: caps